# aws-cpp-lambda

aws-sdk-cpp/crt/aws-crt-cpp/crt/aws-c-io/source/windows/: secure_channel_tls_handler.c
example-code/: CMakeLists.txt
example-code/include/: DynamoDB.h  S3GetObject.h  buildResponse.h  fileSystem.h  headers.h
example-code/src/: DynamoDB.cpp  S3GetObject.cpp  buildResponse.cpp  fileSystem.cpp  main.cpp
